# verdant-octo-spork

./: .gitignore  .gitignore.swo  .gitignore.swp  README.md  Report_backup.docx  ~$deAColony_report.docx
BareMinimumSDL/: bareMinimum.c  bareMinimum2.c  makeForWinX64.bat  makefile_lab2  makefile_lab2~  makefile_lab~  modularUI.c  modularUI.h  modularUI_bin
BlockFunctions/: BlockFunctions.c
Prototype/: .gitignore  .txt  CMakeLists.txt  Prototype  makeForWinX32.bat  makeForWinX64.bat  makefile  makefile_alex  makefile_alex~  makefile_experimental  makefile_lab  makefile_lab~  makefile_mac  makefile_matt  makefile_win32  makefile_win32~  makefile_win64  makefile_win64~  makefile~
Prototype/Img templates/: Mockups.psd  block.psd  compile.psd  crossbox.psd  hivecell.psd  spider.psd  stop.psd
Prototype/Prototype/: CMakeLists.txt  makefile_alex  makefile_win64
Prototype/Prototype/src/: .txt  AI.c  UI.c  UI.h  controls.c  game.c  game_objects.c  game_objects.h  graphics.c  world_generation.c
Prototype/SDL_ttf_lab/lib/x86_64-linux-gnu/pkgconfig/: SDL2_ttf.pc
Prototype/assets/: GenericWorkerAI.txt  GenericWorkerAI.txt~  GenericWorkerAI_2.txt  config.txt
Prototype/assets/ai/: GenericWorkerAI.txt
Prototype/assets/images/: bee.bmp~HEAD
Prototype/bin_alex/: Prototype
Prototype/bin_jamie/: Prototype
Prototype/bin_lab/: Prototype
Prototype/bin_mac/: Prototype
Prototype/bin_x64/: GenericWorkerAI.txt
Prototype/libraries_Alex/SDL_ttf/include/: SDL_ttf.h~
Prototype/libraries_Lab/SDL_mixer/include/: SDL_mixer.h~
Prototype/libraries_x64/SDL2/include/SDL2/: SDL_platform.h
Prototype/libraries_x86/SDL_mixer/include/: SDL_mixer.h
Prototype/src/: AI.c  AI.c~  AI.h  AI.h~  UI.c  UI.c~  UI.h  UI.h~  all.test.c  all.test.h  announcements.c  announcements.h  audio.c  audio.c~  audio.h  configuration.c  configuration.h  controls.c  controls.c~  controls.h  controls.h~  controls.test.c  game.c  game.c~  game.h  game_objects.c  game_objects.c~  game_objects.h  game_objects.h~  generic.c  generic.c~  generic.h  generic.h~  generic.test.c  graphics.c  graphics.c~  graphics.h  graphics.h~  init.c  init.c~  (+10 more)
Prototype/tests/: main.test.c
Report stuff/: Graphics.rtf  Group meetings.rtf
Scribblings/: bareMinimum.c  makefile  modularUI  modularUI.c  modularUI2.c  modularUI2.h  modularUIBackend2.c  modularUIBackend2.h  modularUIStructs2.h  testing.c
Scribblings/Old/: modularUI.h  modularUIBackend.c  modularUIBackend.h  modularUIStructs.h
codeAColony/: CodeAColony  makefile  makefile~
codeAColony/src/: defs.h  defs.h~  init.c  init.c~  init.h  input.c  input.c~  main.c  main.c~  main.h
pointerGridExperiment/: CodeAColony  defs.h  defs.h~  init.c  init.c~  init.h  input.c  input.c~  main.c  main.c~  main.h  makefile
